Fixes for table overflow

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -57,6 +57,7 @@ div.alert i {
         Area
 -------------------------------------------------------------------------*/
 
-#products-table {
-    overflow: scroll;
+.table-responsive-parent {
+    padding: 0;
+    overflow-x: auto;
 }
